# webapp_essentials

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  main.py
src/database/: create.sql  crud_operations.py  database_setup.py  product.py
src/routers/: product.py
tests/: conftest.py  test_crud_operations.py  test_database_setup.py  test_product.py
