[tool.poetry]
name = "webapp-essentials"
version = "0.1.0"
description = "WebApp Essentials: a simple app using FastAPI, SQLModel, and Docker"
authors = ["Japheth Yates <japheth.yates@gmail.com>"]
readme = "README.md"
packages = [{include = "webapp_essentials"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
uvicorn = "^0.29.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
types-requests = "^2.31.0.20240406"
httpx = "^0.27.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = 'src/database/alembic'

[tool.flake8]
ignore = ["W605"]
max-line-length = 99
exclude = ["src/database/alembic"]

[tool.mypy]
cache_dir = ".local/mypy_cache"
mypy_path = "stubs"
follow_imports = "normal"
warn_unused_configs = true
namespace_packages = true
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_incomplete_stub = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_context = true
strict_equality = true
strict_optional = true
strict = true
pretty = true
disallow_subclassing_any = false
exclude = ["src/database/alembic"]

[[tool.mypy.overrides]]
module = ["src.database.alembic.versions.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["alembic.*"]
no_implicit_reexport = false

[tool.isort]
profile = "black"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 99
multi_line_output = 3
src_paths = ["src", "tests"]
skip = ["src/database/alembic", ".venv"]

[tool.ruff]
line-length = 99
exclude = ["src/database/alembic", ".venv", "build", "dist"]

[tool.lint.ruff]
select = ["E", "F", "W", "I"]
ignore = ["W605"]